--- a/index.html
+++ b/index.html
@@ -359,10 +359,84 @@
       </div>
     </div>
   </div>
+  <div class="section" id="contact">
+    <div class="cc-contact-information" style="background-image: url('images/staticmap.png')">
+      <div class="container">
+        <div class="cc-contact">
+          <div class="row">
+            <div class="col-md-9">
+              <div class="card mb-0" data-aos="zoom-in">
+                <div class="h4 text-center title">Liên hệ tôi</div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <form action="https://formspree.io/your@email.com" method="POST">
+                        <div class="p pb-3"><strong>Liên hệ tôi miễn phí </strong></div>
+                        <div class="row mb-3">
+                          <div class="col">
+                            <div class="input-group"><span class="input-group-addon"><i
+                                  class="fa fa-user-circle"></i></span>
+                              <input class="form-control" type="text" name="name" placeholder="Tên"
+                                required="required" />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row mb-3">
+                          <div class="col">
+                            <div class="input-group"><span class="input-group-addon"><i
+                                  class="fa fa-file-text"></i></span>
+                              <input class="form-control" type="text" name="Subject" placeholder="Chủ đề"
+                                required="required" />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row mb-3">
+                          <div class="col">
+                            <div class="input-group"><span class="input-group-addon"><i
+                                  class="fa fa-envelope"></i></span>
+                              <input class="form-control" type="email" name="_replyto" placeholder="E-mail"
+                                required="required" />
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row mb-3">
+                          <div class="col">
+                            <div class="form-group">
+                              <textarea class="form-control" name="message" placeholder="Thông tin khác của bạn"
+                                required="required"></textarea>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col">
+                            <button class="btn btn-primary" type="submit">Gửi</button>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <p class="mb-0"><strong>Địa chỉ </strong></p>
+                      <p class="pb-2">Daklak</p>
+                      <p class="mb-0"><strong>Số điện thoại</strong></p>
+                      <p class="pb-2">+0332591776</p>
+                      <p class="mb-0"><strong>Email</strong></p>
+                      <p>vshbmt@gmail.com</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <footer class="footer">
     <div class="container text-center">
-      <a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a><a
-        class="cc-twitter btn btn-link" href="#"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+      <a class="cc-facebook btn btn-link" href="https://www.facebook.com/vusinhhuyprofileb"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a><a
+        class="cc-twitter btn btn-link" href="https://twitter.com/Vu_sinh_huy"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
     </div>
     <div class="h4 title text-center">Vũ Sinh Huy</div>
     <div class="text-center text-muted">
